# material-rs

./: Cargo.toml  flake.nix
crates/core/core/: Cargo.toml
crates/core/core/src/: geometry.rs  lib.rs  renderer.rs  theme.rs
crates/core/core/src/widgets/: button.rs  label.rs  mod.rs
crates/material-core/: Cargo.toml
crates/renderer/sdl2/: Cargo.toml
crates/renderer/sdl2/src/: lib.rs
crates/renderer/terminal/: Cargo.toml
crates/renderer/terminal/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
