[workspace]
members = ["crates/*/*", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Po Co"]
edition = "2024"

[workspace.dependencies]
material-core = { path = "crates/core/core" }
material-terminal-renderer = { path = "crates/renderer/terminal" }
material-sdl2-renderer = { path = "crates/renderer/sdl2" }
